--- a/jk.html
+++ b/jk.html
@@ -148,20 +148,20 @@
       <strong>JUJUTSU KAISEN</strong>
       <div class="moment-s-container">
         <img
-          src="./img/JUJUTSU KAISEN anime moment1.jpg"
-          alt="JUJUTSU KAISEN anime moment1"
+          src="./img/jujutsu kaisen anime moment1.jpg "
+          alt="jujutsu kaisen anime moment1"
         />
         <img
-          src="./img/JUJUTSU KAISEN anime moment2.jpg"
-          alt="JUJUTSU KAISEN anime moment2"
+          src="./img/jujutsu kaisen anime moment2.jpg"
+          alt="jujutsu kaisen anime moment2"
         />
         <img
-          src="./img/JUJUTSU KAISEN anime moment3.jpg"
-          alt="JUJUTSU KAISEN anime moment3"
+          src="./img/jujutsu kaisen anime moment3.jpg"
+          alt="jujutsu kaisen anime moment3"
         />
         <img
-          src="./img/JUJUTSU KAISEN anime moment4.jpg"
-          alt="JUJUTSU KAISEN anime moment4"
+          src="./img/jujutsu kaisen anime moment4.jpg"
+          alt="jujutsu kaisen anime moment4"
         />
       </div>
     </section>
